--- a/Visuals/templates/contact.html
+++ b/Visuals/templates/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="da">
 <head>
+
     <!-- Meta -->
     <meta charset="UTF-8"> <!-- ÆØÅ -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- In case some nerd uses Internet Explorer -->
@@ -30,11 +31,14 @@
     <script type="module" src="../static/js/components/navbar.js" defer></script>
     <script type="module" src="../static/js/components/footer.js" defer></script>
     <script type="module" src="../static/js/components/footer-nav.js" defer></script>
+
 </head>
 <body class="subpage">
+
     <!-- Navbar Start -->
     <div id="navbar-component"></div>
     <!-- Navbar End -->
+
     <!-- Hero Section Start -->
     <section class="hero">
         <div class="guac-container">
@@ -54,6 +58,8 @@
         <!-- End Wave Hero End -->
     </section>
     <!-- Hero Section End -->
+
+    <!-- Contact Section Start -->
     <section class="section-1 contact-section">
         <div class="guac-container">
             <div class="guac-row guac-justify-center">
@@ -62,7 +68,7 @@
                     <p class="guac-pb-5">Har du spørgsmål, en specialbestilling eller brug for hjælp? Skriv til os herunder.</p>
                 </div>
             </div>
-            <div class="guac-row guac-justify-center guac-animate guac-fade-slide-up">
+            <div class="guac-row guac-justify-center guac-animate guac-fade-slide-up guac-pb-5">
                 <div class="guac-col-8">
                     <form class="contact-form" action="../templates/tak.html" method="get">
                         <div class="guac-row">
@@ -101,10 +107,18 @@
             </div>
         </div>
     </section>
-    <section class="section-2 contact-findus">
-        <div class="wave-2">
+    <!-- Contact Section End -->
+
+    <!-- Find us Start -->
+    <!-- <section class="section-2 contact-findus"> -->
+
+        <!-- Wave 2 -->
+        <!-- <div class="wave-2">
             <img src="../static/images/waves/wave-section-1.svg">
         </div>
+         -->
+        <!-- Wave 2 -->
+        <!--
         <div class="guac-container">
             <div class="guac-row guac-justify-center">
                 <div class="section-2-intro guac-animate guac-zoom-in">
@@ -126,21 +140,18 @@
                 </div>
             </div>
         </div>
+        -->
+
+        <!-- End Wave Contact -->
+        <!--
         <div class="wave-3">
             <img src="../static/images/waves/footer-wave.svg">
         </div>
-        <!-- End Wave Section 2 End -->
+        -->
+        <!-- End Wave Contact -->
 
-    </section>
-    <!-- Section 2 End -->
-
-    <!-- Footer -->
-    <div id="footer-component"></div>
-    <!-- Footer -->
-
-    <!-- Footer Nav -->
-    <div id="footer-nav-component"></div>
-    <!-- Footer Nav -->
+    <!--</section>-->
+    <!-- Find us Start -->
 
 </body>
 </html>
