--- a/Visuals/templates/order.html
+++ b/Visuals/templates/order.html
@@ -23,6 +23,7 @@
     <!-- Framwork load -->
     <link rel="stylesheet" href="../static/css/guacamoleboy-wow.css">
     <link rel="stylesheet" href="../static/css/guacamoleboy-framework.css">
+    <link rel="stylesheet" href="../static/css/andreas.css">
     <script src="../static/js/guacamoleboy-wow.js" defer></script>
 
     <!-- Modules -->
@@ -37,17 +38,15 @@
 
     <!-- Hero Section Start -->
     <section class="hero">
-
+        
         <div class="guac-container">
             <div class="guac-row">
-                
                 <div class="guac-col-auto subpage-cupcake-1">
                     <img src="../static/images/page-content/index/cupcake-3.png" alt="Billede 1">
                 </div>
                 <div class="guac-col-auto subpage-cupcake-2">
                     <img src="../static/images/page-content/index/cupcake-3.png" alt="Billede 2">
                 </div>
-
             </div>
         </div>
 
@@ -69,6 +68,48 @@
         </div>
     </section>
     <!-- Next Section End -->
+
+    <!-- Section -->
+    <section id="menu">
+        <div class="guac-container">
+            <div class="guac-row guac-justify-center">
+                <div class="menu-wrapper">
+                    <h2>Voers Cupcakes</h2>
+                    <p>Se vores store udvalg af cupcakes herunder...</p>
+                </div>
+                <div class="products"> <!-- Static -->
+
+                    <!-- One Card - Dynamic -->
+                    <div class="product-item col-auto" id="$dynamic">
+                        <img src="../static/images/products/cupcake-1.png"></img>
+                        <p class="product-title">Chokolade cupcake</p>
+                        <p class= "product-desc">Beskrivelse her diddy</p>
+                        <div class="order-wrapper guac-mb-3">
+                            <a href="#" class="add-product">Bestil</a>
+                        </div>
+                    </div>
+                    <!-- One Card -->
+                    <div class="product-item col-auto" id="$dynamic">
+                        <img src="../static/images/products/cupcake-1.png"></img>
+                        <p class="product-title">Chokolade cupcake</p>
+                        <p class= "product-desc">Beskrivelse her diddy</p>
+                        <div class="order-wrapper guac-mb-3">
+                            <a href="#" class="add-product">Bestil</a>
+                        </div>
+                    </div>
+                    <div class="product-item col-auto" id="$dynamic">
+                        <img src="../static/images/products/cupcake-1.png"></img>
+                        <p class="product-title">Chokolade cupcake</p>
+                        <p class= "product-desc">Beskrivelse her diddy</p>
+                        <div class="order-wrapper guac-mb-3">
+                            <a href="#" class="add-product">Bestil</a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 </html>
