--- a/Visuals/templates/galleri.html
+++ b/Visuals/templates/galleri.html
@@ -31,7 +31,7 @@
     <script type="module" src="../static/js/components/footer-nav.js" defer></script>
 
 </head>
-<body class="subpage event-page">
+<body class="subpage galleri-page">
 
     <!-- Navbar -->
     <div id="navbar-component"></div>
@@ -62,56 +62,52 @@
     </section>
     <!-- Hero Section End -->
 
-    <!-- Event Section Start -->
+    <!-- Gallery Section Start -->
     <section class="section-1">
         <div class="guac-container">
             <div class="guac-row">
 
-                <!-- Event Card Start -->
+                <!-- Gallery Card Start -->
                 <div class="guac-col-12 guac-mt-5">
-                    <h2>Upcoming Events</h2>
-                    <p>Se alle vores kommende events og tilmeld dig i dag!</p>
+                    <h2>Galleri</h2>
+                    <p>Se, like og kommenter vores nyeste opslag!</p>
                     <div class="guac-grid-3 guac-gap-4">
 
-                        <div class="guac-card event-card">
-                            <div class="event-image-container">
-                                <img src="../static/images/page-content/events/event-card-1.png" alt="Autumn Cupcake Fair">
-                                <div class="event-badge">12/10-2025</div>
+                        <div class="guac-card galleri-card">
+                            <div class="galleri-image-container">
+                                <img src="../static/images/page-content/events/event-card-1.png" alt="ID HER">
                             </div>
-                                <div class="guac-card-title">Cupcake Eating Contest</div>
+                            <div class="galleri-card-wrapper guac-pt-2">
+                                <div class="guac-card-title">En dag på slottet</div>
                                 <div class="guac-card-text">
-                                    Whos the fattest of the fattest? 90min. Eat as many as u can, fatty.
+                                    Fuck dig!
                                 </div>
-                            <a href="#" class="guac-btn guac-btn-event guac-mt-2">Join Now</a>
+                            </div>
                         </div>
 
-                        <div class="guac-card event-card">
-                            <div class="event-image-container">
-                                <img src="../static/images/page-content/events/event-card-1.png" alt="Autumn Cupcake Fair">
-                                <div class="event-badge">20/10-2025</div>
+                        <div class="guac-card galleri-card">
+                            <div class="galleri-image-container">
+                                <img src="../static/images/page-content/events/event-card-1.png" alt="ID HER">
                             </div>
-                            <div class="guac-card-title">Chocolate Dipping</div>
+                            <div class="guac-card-title">En dag på slottet</div>
                             <div class="guac-card-text">
-                                Dip your balls in chocolate and make a mold for a loved one!
+                                Fuck dig!
                             </div>
-                            <a href="#" class="guac-btn guac-btn-event guac-mt-2">Reserve Spot</a>
                         </div>
 
-                        <div class="guac-card event-card">
-                            <div class="event-image-container">
-                                <img src="../static/images/page-content/events/event-card-1.png" alt="Autumn Cupcake Fair">
-                                <div class="event-badge">31/10-2025</div>
+                        <div class="guac-card galleri-card">
+                            <div class="galleri-image-container">
+                                <img src="../static/images/page-content/events/event-card-1.png" alt="ID HER">
                             </div>
-                            <div class="guac-card-title">#BLM Meeting</div>
+                            <div class="guac-card-title">En dag på slottet</div>
                             <div class="guac-card-text">
-                                let's get it! yesssirrrrski. Whatever. This is a text.
+                                Fuck dig!
                             </div>
-                            <a href="#" class="guac-btn guac-btn-event guac-mt-2">Learn More</a>
                         </div>
 
                     </div>
                 </div>
-                <!-- Event Card End -->
+                <!-- Gallery Card End -->
 
             </div>
         </div>
@@ -123,15 +119,8 @@
         <!-- End Wave Section 2 End -->
 
     </section>
-    <!-- Event Section End -->
+    <!-- Gallery Section End -->
 
-    <!-- Footer -->
-    <div id="footer-component"></div>
-    <!-- Footer -->
-
-    <!-- Footer Nav -->
-    <div id="footer-nav-component"></div>
-    <!-- Footer Nav -->
 
 </body>
 </html>
