idk what this commit is

--- a/Visuals/templates/order.html
+++ b/Visuals/templates/order.html
@@ -74,7 +74,7 @@
         <div class="guac-container">
             <div class="guac-row guac-justify-center">
                 <div class="menu-wrapper">
-                    <h2>Voers Cupcakes</h2>
+                    <h2>Vores Cupcakes</h2>
                     <p>Se vores store udvalg af cupcakes herunder...</p>
                 </div>
                 <div class="products"> <!-- Static -->
