--- a/Visuals/templates/contact.html
+++ b/Visuals/templates/contact.html
@@ -106,6 +106,11 @@
                 </div>
             </div>
         </div>
+    <!-- Footer Wave Start -->
+        <div class="wave-3">
+            <img src="../static/images/waves/footer-wave.svg">
+        </div>
+     <!-- Footer Wave End -->
     </section>
     <!-- Contact Section End -->
 
@@ -147,11 +152,20 @@
         <div class="wave-3">
             <img src="../static/images/waves/footer-wave.svg">
         </div>
-        -->
+
         <!-- End Wave Contact -->
 
     <!--</section>-->
     <!-- Find us Start -->
+
+
+      <!-- Footer -->
+    <div id="footer-component"></div>
+    <!-- Footer -->
+
+    <!-- Footer Nav -->
+    <div id="footer-nav-component"></div>
+    <!-- Footer Nav -->
 
 </body>
 </html>
