Jonas Solo til 22:20

--- a/Visuals/templates/contact.html
+++ b/Visuals/templates/contact.html
@@ -106,6 +106,13 @@
                 </div>
             </div>
         </div>
+
+        <!-- End Wave Contact -->
+        <div class="wave-3">
+            <img src="../static/images/waves/footer-wave.svg">
+        </div>
+        <!-- End Wave Contact -->
+
     </section>
     <!-- Contact Section End -->
 
@@ -152,6 +159,14 @@
 
     <!--</section>-->
     <!-- Find us Start -->
+
+    <!-- Footer -->
+    <div id="footer-component"></div>
+    <!-- Footer -->
+
+    <!-- Footer Nav -->
+    <div id="footer-nav-component"></div>
+    <!-- Footer Nav -->
 
 </body>
 </html>
