--- a/Visuals/templates/index.html
+++ b/Visuals/templates/index.html
@@ -26,6 +26,7 @@
 
     <!-- Script Load -->
     <script src="../static/js/button-to-top.js"></script>
+    <script src="../static/js/notification.js"></script>
 
     <!-- Modules -->
     <script type="module" src="../static/js/components/navbar.js" defer></script>
@@ -184,6 +185,12 @@
     <!-- Footer Nav -->
     <div id="footer-nav-component"></div>
     <!-- Footer Nav -->
+
+    <!-- Notifications -->
+    <section>
+        <div id="guac-notification-container"></div>
+    </section>
+    <!-- Notifications -->
 
 </body>
 </html>
