--- a/Visuals/templates/order.html
+++ b/Visuals/templates/order.html
@@ -19,7 +19,9 @@
     <!-- CSS Load -->
     <link rel="stylesheet" href="../static/css/style.css">
 
-    <!-- Scripts can also be loaded here with defer -->
+    <!-- Scripts Load -->
+    <script src="../static/js/cart.js" defer></script>
+
     <!-- Framwork load -->
     <link rel="stylesheet" href="../static/css/guacamoleboy-wow.css">
     <link rel="stylesheet" href="../static/css/guacamoleboy-framework.css">
@@ -262,6 +264,10 @@
     <!-- Footer Nav -->
     <div id="footer-nav-component"></div>
     <!-- Footer Nav -->
+
+    <!-- Shopping Cart -->
+    <div id="cart-container"></div>
+    <!-- Shopping Cart -->
 
 </body>
 </html>
